--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu_HU">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,35 +9,48 @@
     <!-- Komment -->
 
     <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+        integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
 
     <!-- Bootstrap(ha kell, kell, ha nem, nem) -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <!-- Saját Javascript -->
     <script type="module" src="main.js"></script>
     <!-- Saját css -->
     <link rel="stylesheet" href="stilus.css">
 </head>
+
 <body>
     <main>
         <header>
             <h1>Email küldő</h1>
         </header>
         <nav>
-            <ul>
-                <li>Főoldal</li>
-                <li>Küldések</li>
-            </ul>
+           <ul>
+            <li><a href="#">Menu1</a></li>
+            <li><a href="#">Menu2</a></li>
+           </ul>
         </nav>
+
         <article>
-            <div class=""></div>
-            <div class=""></div>
+            <div class="fajl_kivalaszt">
+                <label for="myfile">Itt kiválaszthatja a fájlt: </label>
+                <input type="file" id="myfile" name="myfile">
+            </div>
+            <div class="urlap"></div>
         </article>
+
         <aside>
-            <div class="oldalsav"></div>
+            <div id="gyorsmenu_felsorolas">
+                gyorsmenu
+            </div>
         </aside>
-        <footer>Minden jog fenntartca</footer>
+        <footer>Minden jog fenntartva</footer>
     </main>
 </body>
+
 </html>
