Elérem a fájlnevet, kiszedem a kódot zárójelekkel

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 -->
             </div>
             <div class="urlap"></div>
+            <div id="kiiras"><p>Ide írja majd ki a nevet</p></div>
         </article>
 
         <aside>
