Táblázat megjelni és lehet fájlt kiválasztani

--- a/index.html
+++ b/index.html
@@ -29,35 +29,11 @@
         <header>
             <h1>Email küldő</h1>
         </header>
-        <nav>
-            <!--
-           <ul>
-            <li><a href="#">Menu1</a></li>
-            <li><a href="#">Menu2</a></li>
-           </ul>
-           -->
-        </nav>
-
+        <nav></nav>
         <article>
-            <div class="fajl_kivalaszt">
-                <h3>Helló!</h3>
-                <p>Itt fel tudsz tölteni egyesével is fájlokat!</p>
-                <!--
-                <label for="myfile">Itt kiválaszthatja a fájlt: </label>
-                <input type="file" id="myfile" name="myfile">
-                -->
-                <p id="kiiras">Ide írja majd ki a kódot</p>
-            </div>
-            <div class="urlap"></div>
+            <div class="tarolo"></div>
         </article>
-
         <aside>
-            <div id="gyorsmenu_felsorolas">
-                gyorsmenu
-                <div id="felsorolas">
-                    
-                </div>
-            </div>
         </aside>
         <footer>Minden jog fenntartva</footer>
     </main>
